# prompt-for-good

./: .gitignore  README.md
.github/workflows/: ci-agent.yml  ci-hub.yml
docs/: ADR-001-tech-stack.md  ADR-002-issue-scoring.md  ARCHITECTURE.md  CONTRIBUTING.md  HOSTING.md
pfg-agent/: .env.example  LICENSE  README.md  pyproject.toml
pfg-agent/pfg_agent/: config.py  hub_client.py  main.py  pipeline.py
pfg-agent/pfg_agent/phases/: analyze.py  claim.py  context.py  pr.py  report.py  solve.py  verify.py
pfg-agent/tests/: conftest.py  test_context.py  test_hub_client.py
pfg-hub/: build.gradle.kts  docker-compose.yml  settings.gradle.kts
pfg-hub/src/main/kotlin/dev/promptforgood/: PfgHubApplication.kt
pfg-hub/src/main/kotlin/dev/promptforgood/config/: AdminAuthFilter.kt  OpenApiConfig.kt  SecurityConfig.kt
pfg-hub/src/main/kotlin/dev/promptforgood/controller/: GlobalExceptionHandler.kt  IssueController.kt  RunnerController.kt  SeedController.kt  StatsController.kt
pfg-hub/src/main/kotlin/dev/promptforgood/model/: Contribution.kt  Issue.kt  Repo.kt  Runner.kt
pfg-hub/src/main/kotlin/dev/promptforgood/repository/: ContributionRepository.kt  IssueRepository.kt  RepoRepository.kt  RunnerRepository.kt
pfg-hub/src/main/resources/: application.yml
pfg-hub/src/main/resources/db/migration/: V1__Initial_Schema.sql
pfg-hub/src/main/resources/static/: openapi.yml
pfg-hub/src/test/kotlin/dev/promptforgood/: IntegrationTestBase.kt
pfg-hub/src/test/resources/: application-test.yml
pfg-runner/: Dockerfile  docker-compose.yml  pfg.example.yaml
(+14 files in other folders)
